--- a/Release/makefile
+++ b/Release/makefile
@@ -28,13 +28,13 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: Blink.elf
+all: RTC_and_spi_screen.elf
 
 # Tool invocations
-Blink.elf: $(OBJS) $(USER_OBJS) ../STM32F030F4Px_FLASH.ld
+RTC_and_spi_screen.elf: $(OBJS) $(USER_OBJS) ../STM32F030F4Px_FLASH.ld
 	@echo 'Building target: $@'
 	@echo 'Invoking: MCU GCC Linker'
-	arm-none-eabi-gcc -mcpu=cortex-m0 -mthumb -mfloat-abi=soft -specs=nosys.specs -specs=nano.specs -T"../STM32F030F4Px_FLASH.ld" -Wl,-Map=output.map -Wl,--gc-sections -o "Blink.elf" @"objects.list" $(USER_OBJS) $(LIBS) -lm
+	arm-none-eabi-gcc -mcpu=cortex-m0 -mthumb -mfloat-abi=soft -specs=nosys.specs -specs=nano.specs -T"../STM32F030F4Px_FLASH.ld" -Wl,-Map=output.map -Wl,--gc-sections -o "RTC_and_spi_screen.elf" @"objects.list" $(USER_OBJS) $(LIBS) -lm
 	@echo 'Finished building target: $@'
 	@echo ' '
 	$(MAKE) --no-print-directory post-build
@@ -46,8 +46,8 @@ clean:
 
 post-build:
 	-@echo 'Generating binary and Printing size information:'
-	arm-none-eabi-objcopy -O binary "Blink.elf" "Blink.bin"
-	arm-none-eabi-size "Blink.elf"
+	arm-none-eabi-objcopy -O binary "RTC_and_spi_screen.elf" "RTC_and_spi_screen.bin"
+	arm-none-eabi-size "RTC_and_spi_screen.elf"
 	-@echo ' '
 
 .PHONY: all clean dependents
